--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,5 @@
 [phases.setup]
-nixPkgs = ["ffmpeg"]
+nixPkgs = ['...', 'python3', 'python3Packages.pip', 'ffmpeg']
+
+# Optional: If you need gcc/make for any compiled deps (rare for discord.py)
+# aptPkgs = ['build-essential']
